# tensor-computing-interface-backend-cytnx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ExternalARPACK.cmake  FindARPACK.cmake
cmake/toolchains/: linux-intel-oneapi.cmake  macos-homebrew.cmake
conformance/include/tcict/: elem_helper.h
conformance/include/tcict/tests/: construction.h  io_operations.h  linear_algebra.h  miscellaneous.h  read_only_getters.h  tensor_manipulation.h
docs/: USER_GUIDE.md
documentation/: CMakeLists.txt  USER_GUIDE.md  conf.py
examples/: CMakeLists.txt  basic_tensor_example.cpp  simple_tensor_operations.cpp  svd_example.cpp  tensor_contraction_example.cpp
include/tci/: construction_destruction.h  context_handle.h  cytnx_tensor_traits.h  cytnx_typed_tensor.h  cytnx_typed_tensor_impl.h  cytnx_typed_tensor_impl_deprecated.h  debugging.h  io_operations.h  miscellaneous.h  read_only_getters.h  tci.h  tensor_linear_algebra.h  tensor_linear_algebra_impl.h  tensor_manipulation.h  tensor_traits.h  variant_helpers.h  version.h.in
include/tci/detail/: convert_impl.h  cytnx_io_adapter.h  version_impl.h.in
source/: construction_destruction.cpp  cytnx_typed_tensor.cpp  debugging.cpp  io_operations.cpp  miscellaneous.cpp  read_only_getters.cpp  tci_base.cpp  tensor_linear_algebra.cpp  tensor_manipulation.cpp  tensor_traits.cpp
test/: CMakeLists.txt  CMakePresets.json
test/source/: conformance_runner.cpp  contract_axis_mapping_test.cpp  tci_advanced.cpp.disabled  tci_basic.cpp  tci_basic_gpu.cpp  tci_for_each_test.cpp  tci_itebd_integration.cpp  tci_placeholder_detection.cpp.disabled  tci_template_completeness_test.cpp  tci_template_test.cpp  tci_tests.cpp  tci_utilities_tests.cpp  tci_variant_elem_test.cpp  test_api_compliance.cpp  test_basic_operations.cpp  test_cytnx_comprehensive_api.cpp  test_cytnx_typed_tensor.cpp  test_deprecated_apis.cpp  test_io_operations.cpp  test_linear_algebra.cpp  test_tensor_operations.cpp  test_type_operations.cpp
